// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BooleanExpression allows a & b | c – boolean logic for courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$and": Array [
        Object {
          "$course": Object {
            "department": Array [
              "CSCI",
            ],
            "number": 121,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": Array [
              "CSCI",
            ],
            "number": 122,
          },
          "$type": "course",
        },
      ],
      "$booleanType": "and",
      "$type": "boolean",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 123,
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows a | b & c – boolean logic for courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$and": Array [
        Object {
          "$course": Object {
            "department": Array [
              "CSCI",
            ],
            "number": 122,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": Array [
              "CSCI",
            ],
            "number": 123,
          },
          "$type": "course",
        },
      ],
      "$booleanType": "and",
      "$type": "boolean",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows several &-d courses in a row 1`] = `
Object {
  "$and": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 126,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 123,
      },
      "$type": "course",
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`BooleanExpression allows several |-d courses in a row 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 126,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 123,
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression changes departments when given a new one 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "PSCI",
        ],
        "number": 125,
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression keeps duplicates in a list of courses 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses separated by & as being and-d 1`] = `
Object {
  "$and": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses separated by | as being or-d 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression parses courses with no departments after an prior department 1`] = `
Object {
  "$booleanType": "or",
  "$or": Array [
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 121,
      },
      "$type": "course",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 125,
      },
      "$type": "course",
    },
  ],
  "$type": "boolean",
}
`;

exports[`BooleanExpression supports parentheses to control order-of-operations - (a | b) & c 1`] = `
Object {
  "$and": Array [
    Object {
      "$booleanType": "or",
      "$or": Array [
        Object {
          "$course": Object {
            "department": Array [
              "CSCI",
            ],
            "number": 121,
          },
          "$type": "course",
        },
        Object {
          "$course": Object {
            "department": Array [
              "CSCI",
            ],
            "number": 122,
          },
          "$type": "course",
        },
      ],
      "$type": "boolean",
    },
    Object {
      "$course": Object {
        "department": Array [
          "CSCI",
        ],
        "number": 123,
      },
      "$type": "course",
    },
  ],
  "$booleanType": "and",
  "$type": "boolean",
}
`;
